--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: #333;
+    color:red;
     text-align: left;
     font-family: Arial;
     font-size: 16px;
@@ -9,16 +9,16 @@ body{
 }
 #cabecera{
     background: #33A;
-    box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.5);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
 }
-#cabecera #tagline{
+#cabecera #taglinea{
     padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.8;
+    font-size: 0.8em;
 }
 #container{
     width: 70%;
