--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,7 +15,7 @@ body{
     margin: 0;
     padding: 0.5em;
 }
-#cabecera #tagline{
+#cabecera #taglinea{
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: 0.8;
